# magic-mesh

./: .gitignore  ADMIN.md  AGENTS.md  AI_GOVERNANCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  LICENSE  NOTICE  README.md  RPM-GPG-KEY-magic-mesh  SECURITY.md  SUPPORT.md  chart.js  clippy.toml  deny.toml  digest_results.txt  findings.txt  index.html  package-lock.json  public.css  rust-toolchain.toml
crates/desktop/mde-bookmarks-egui/: Cargo.toml
crates/desktop/mde-bookmarks-egui/src/: lib.rs  main.rs  model.rs  view.rs
crates/desktop/mde-collab-egui/: Cargo.toml
crates/desktop/mde-collab-egui/src/: activity.rs  alerts.rs  anim.rs  calls.rs  clipboard.rs  data.rs  documents.rs  files.rs  fixture.rs  frame.rs  icons.rs  lib.rs  messages.rs  tests.rs  transfers.rs
crates/desktop/mde-editor-egui/: Cargo.toml
crates/desktop/mde-editor-egui/src/: buffer.rs  collab_session.rs  crdt.rs  finder.rs  fold.rs  follow.rs  format_bar.rs  fuzzy.rs  highlight.rs  lib.rs  lsp.rs  lsp_nav.rs  lsp_ui.rs  main.rs  markdown.rs  md_actions.rs  menu_bar.rs  outline.rs  palette.rs  panel.rs  panes.rs  print.rs  project_tree.rs  search.rs  spell.rs  terminal.rs  toolbar.rs  tooltip.rs  widget.rs
crates/desktop/mde-files-egui/: Cargo.toml
crates/desktop/mde-files-egui/src/: chat_bridge.rs  dialogs.rs  lib.rs  main.rs  menubar.rs  mesh_mount.rs  model.rs  ops.rs  preview.rs  transfers.rs  view.rs
crates/desktop/mde-jellyfin/: Cargo.toml
crates/desktop/mde-jellyfin/src/: browse.rs  cache.rs  client.rs  lib.rs  models.rs  net.rs  playback.rs  store.rs  sync.rs
crates/desktop/mde-jellyfin/tests/: browse.rs  playback.rs
crates/desktop/mde-maps-location-egui/: Cargo.toml
crates/desktop/mde-maps-location-egui/src/: air_quality.rs  aircraft.rs  airspace.rs  basemap.rs  caltrans_camera.rs  car_status.rs  earthquake.rs  geocode.rs  iem_radar.rs  lib.rs  main.rs  model.rs  nws_alert.rs  nws_forecast.rs  traffic.rs  transit.rs  view.rs  wildfire.rs
crates/desktop/mde-media-core/: Cargo.toml
crates/desktop/mde-media-core/src/: audio.rs  capabilities.rs  capture.rs  cast.rs  controls.rs  engine.rs  fake.rs  lib.rs  library.rs  mpv.rs  opensubtitles.rs  party.rs  player.rs  playlist.rs  resume.rs  roaming.rs  stream.rs  subtitle.rs  video.rs  ytdlp.rs
crates/desktop/mde-media-core/tests/: mpv_fixture_decode.rs
crates/desktop/mde-media-egui/: Cargo.toml
crates/desktop/mde-media-egui/src/: app.rs  lib.rs  main.rs  menubar.rs  model.rs
crates/desktop/mde-mesh-view/: Cargo.toml
crates/desktop/mde-mesh-view/examples/: mesh_view.rs
crates/desktop/mde-mesh-view/src/: layout.rs  lib.rs  menubar.rs  state.rs  view.rs
crates/desktop/mde-music-egui/: Cargo.toml
crates/desktop/mde-music-egui/src/: app.rs  lib.rs  main.rs  menubar.rs  model.rs  worker.rs
crates/desktop/mde-panel-egui/: Cargo.toml
crates/desktop/mde-panel-egui/src/: lib.rs  main.rs
crates/desktop/mde-seat/: Cargo.toml
crates/desktop/mde-seat/src/: arrange.rs  backlight.rs  bluez.rs  bus.rs  charge_threshold.rs  ddc.rs  display.rs  error.rs  hotkeys.rs  lib.rs  lid.rs  logind.rs  mixer.rs  pairing.rs  powerprofiles.rs  props.rs  snapshot.rs  upower.rs
crates/desktop/mde-shell-egui/: Cargo.toml
crates/desktop/mde-shell-egui/src/: about.rs  auth.rs  backdrop.rs  bt_pairing.rs  bus_reader.rs  car_home.rs  car_keymap.rs  car_motion_policy.rs  chat.rs  chooser.rs  chrome.rs  clipboard.rs  cloud_plane.rs  console.rs  construct.rs  control_center.rs  controller.rs  curtain.rs  datacenter.rs  device_manager.rs  discovery.rs  dock.rs  empty_state.rs  explorer.rs  federation.rs  formfactor.rs  front_door.rs  front_door_peer_apps.rs  host_mirror.rs  hotkeys.rs  iac.rs  instances.rs  keyboard.rs  launcher_pins.rs  lock_signal.rs  logging.rs  main.rs  mesh_view.rs  network.rs  notification_center.rs  (+30 more)
crates/desktop/mde-term-egui/: Cargo.toml
crates/desktop/mde-term-egui/src/: appearance.rs  bell.rs  blueprint.rs  engine.rs  fonts.rs  keymap.rs  layout.rs  layout_ui.rs  lib.rs  main.rs  menu.rs  menubar.rs  mesh_tmux.rs  mouse.rs  notify.rs  overlay.rs  palette.rs  panel.rs  picker.rs  presets.rs  presets_tmux.rs  pty.rs  remote.rs  roster.rs  screen.rs  search.rs  session.rs  smart.rs  splits.rs  tabs.rs  title.rs  tmux.rs  tmux_config.rs  tmux_store.rs  tmux_ui.rs  tooltip.rs  watch.rs  widget.rs
crates/desktop/mde-vdi-core/: Cargo.toml
crates/desktop/mde-vdi-core/src/: damage.rs  input.rs  lib.rs  pixel.rs
crates/desktop/mde-vdi-rdp/: Cargo.toml
crates/desktop/mde-vdi-rdp/src/: config.rs  connect.rs  input.rs  lib.rs  link.rs  pin.rs  pixel.rs  session.rs  tier.rs
crates/desktop/mde-vdi-rdp/tests/: live_rdp.rs  loopback_rdp.rs
crates/desktop/mde-vdi-spice/: Cargo.toml
crates/desktop/mde-vdi-spice/src/: config.rs  connect.rs  input.rs  lib.rs  pixel.rs  session.rs
crates/desktop/mde-vdi-spice/tests/: live_spice.rs  loopback_spice.rs
crates/desktop/mde-vdi-vnc/: Cargo.toml
crates/desktop/mde-vdi-vnc/src/: config.rs  connect.rs  des.rs  encoding.rs  input.rs  lib.rs  pixel.rs  session.rs  tier.rs  wire.rs
crates/desktop/mde-vdi-vnc/tests/: live_console.rs  loopback_vnc.rs
crates/desktop/mde-voice-egui/: Cargo.toml
crates/desktop/mde-voice-egui/src/: fleet.rs  lib.rs  main.rs  menubar.rs  model.rs  view.rs  worker.rs
crates/desktop/mde-web-cef/: Cargo.toml
crates/desktop/mde-web-cef/src/: cef_abi.rs  cef_browser.rs  cef_init.rs  lib.rs  main.rs  offscreen.rs  renderer.rs  shm.rs  sock.rs
crates/desktop/mde-web-cef/tests/: bridge_handoff.rs  protocol_golden.rs
crates/desktop/mde-web-preview/: Cargo.toml
crates/desktop/mde-web-preview-client/: Cargo.toml
crates/desktop/mde-web-preview-client/src/: filter.rs  frame.rs  input.rs  lib.rs  scm.rs  session.rs  (+2 more)
crates/desktop/mde-web-sandbox/: Cargo.toml
crates/desktop/mde-web-wire/: Cargo.toml
crates/kdc/mde-kdc-host/: Cargo.toml
crates/kdc/mde-kdc-proto/: Cargo.toml
crates/mesh/mackes-config/: Cargo.toml
crates/mesh/mackes-mesh-types/: Cargo.toml
crates/mesh/mackes-nebula-https-tunnel/: Cargo.toml
(+1981 files in other folders)
