# MCNF — the mesh substrate + the E12 "Quasar" egui-native thin-client desktop.
#
# Split out of the MackesWorkstation monorepo (the labwc/Win-era MDE desktop,
# now EOL'd) by the E11 "MCNF" pivot; the E12 "Quasar" pivot then retired the
# Cosmic-era GUI toolkit stack: the host UI is ONE egui shell (mde-shell-egui on
# the mde-egui harness) that owns the DRM seat directly — no compositor, no
# second toolkit (§4/§5). E12-14c removed the last Cosmic-era git pins, so the
# workspace resolves entirely from crates.io again.
#
# Crates: platform (Bus, role) · mesh (mackesd control plane, Nebula, transport,
# config, types, the magic-fleet Automation Mesh node engine) · services
# (mde-files, voice HUD/config, music) · desktop (the E12 egui shell + panels;
# the Workbench is a plane inside mde-shell-egui) · shared (the egui harness +
# look stack, disclaimer) · kdc (the canonical KDE Connect host).

[workspace]
resolver = "2"
# mde-web-preview (BOOKMARKS-5, the sandboxed Servo browser helper) is EXCLUDED
# from the main workspace lockfile ON PURPOSE: the `servo` engine pulls
# `servo-storage` → rusqlite 0.37 → libsqlite3-sys 0.35 (a NON-optional dep, no
# feature gate), which collides on the native `links = "sqlite3"` uniqueness rule
# with the mesh's rusqlite 0.32 / libsqlite3-sys 0.30 (mackesd CA/nebula daemon,
# mde-bus, mde-files, mde-bookmarks). Two packages can't link the same native lib
# in one Cargo.lock. Isolating the browser into its own lock/target keeps that
# heavy, security-critical engine out of the live-fleet daemon's resolution.
# Follow-up (design Q52): unify the workspace on rusqlite 0.37 so this crate can
# rejoin the single-workspace build. Build it standalone:
#   cargo build --manifest-path crates/desktop/mde-web-preview/Cargo.toml
#
# mde-web-cef (BROWSER-DD-1, the Chromium/CEF helper) is likewise EXCLUDED: CEF
# ships as a vendored native runtime on the farm, not as part of the main daemon
# lockfile. Build it standalone while the runtime lane comes up:
#   cargo build --manifest-path crates/desktop/mde-web-cef/Cargo.toml
#
# mde-web-sandbox (security-1) is the SHARED OS-confinement library those two
# helpers reuse (userns + seccomp + dropped caps + pivot_root RO rootfs). It is
# EXCLUDED for the same reason they are: it links the native-syscall crates
# (nix/seccompiler/caps) and needs `unsafe`, which the parent workspace forbids.
# It is never built standalone — only as a path dependency of the helpers.
exclude = [
    "crates/desktop/mde-web-preview",
    "crates/desktop/mde-web-cef",
    "crates/desktop/mde-web-sandbox",
]
members = [
    "crates/platform/mde-bus",
    "crates/platform/mde-role",
    "crates/platform/mde-lighthouse-health",
    "crates/platform/mde-role-chooser",
    "crates/mesh/mackes-config",
    "crates/mesh/mackes-mesh-types",
    "crates/mesh/mackes-nebula-https-tunnel",
    "crates/mesh/mackes-transport",
    "crates/mesh/mackes-xcp",
    "crates/mesh/mackesd",
    "crates/mesh/mde-seal",
    "crates/mesh/mde-worker-core",
    "crates/mesh/mde-browser-workers",
    "crates/mesh/mde-enroll",
    "crates/mesh/magic-fleet",
    "crates/services/mde-adblock",
    "crates/services/mde-bookmarks",
    "crates/services/mde-chat",
    "crates/services/mde-collab-core",
    "crates/services/mde-files",
    "crates/services/mde-musicd",
    "crates/services/mde-voice-config",
    "crates/services/mde-voice-hud",
    "crates/desktop/mde-shell-egui",
    "crates/desktop/mde-media-core",
    "crates/desktop/mde-media-egui",
    "crates/desktop/mde-jellyfin",
    "crates/desktop/mde-mesh-view",
    "crates/desktop/mde-maps-location-egui",
    "crates/desktop/mde-music-egui",
    "crates/desktop/mde-files-egui",
    "crates/desktop/mde-bookmarks-egui",
    "crates/desktop/mde-voice-egui",
    "crates/desktop/mde-vdi-core",
    "crates/desktop/mde-vdi-rdp",
    "crates/desktop/mde-vdi-vnc",
    "crates/desktop/mde-vdi-spice",
    "crates/desktop/mde-web-preview-client",
    "crates/desktop/mde-web-wire",
    "crates/desktop/mde-panel-egui",
    "crates/desktop/mde-seat",
    "crates/desktop/mde-term-egui",
    "crates/desktop/mde-editor-egui",
    "crates/desktop/mde-collab-egui",
    "crates/shared/mde-collab-types",
    "crates/shared/mde-disclaimer",
    "crates/shared/mde-egui",
    "crates/shared/mde-theme",
    "crates/kdc/mde-kdc-host",
    "crates/kdc/mde-kdc-proto",
]

[workspace.package]
version      = "12.1.0"
edition      = "2021"
# EFF-33 — the MSRV floor, enforced by CI (every ci.yml job builds the
# full workspace on pinned 1.85). The dev/build ceiling (1.94, the
# softbuffer cap) lives in rust-toolchain.toml — see its header.
rust-version = "1.85"
license      = "GPL-3.0-or-later"
authors      = ["Matthew Mackes <matthewmackes@gmail.com>"]
repository   = "https://github.com/matthewmackes/magic-mesh"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[workspace.lints.rust]
unsafe_code     = "forbid"
missing_docs    = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic    = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic       = "warn"
todo        = "deny"

# Release is tuned for SPEED, not minimum size (PERF-1): this platform is an
# interactive desktop OS — the egui/wgpu shell paint loop, media/CEF decode glue,
# the crypto/mesh stack, and per-frame layout are all CPU-bound hot paths where
# `opt-level = 3` is materially faster than the old size-first `"z"`. Fat LTO +
# one codegen unit maximize cross-crate inlining; `strip` keeps the shipped image
# lean without costing runtime speed. (Was `opt-level = "z"`; the size increase is
# an accepted trade for a fast, joyful seat.)
[profile.release]
opt-level = 3
# Thin LTO, not fat: on a workspace this large (wgpu + CEF + egui + the mesh
# stack) fat LTO is a 30-60min, high-memory link that risks OOM, for a runtime
# gain over thin that is marginal on these workloads. Thin keeps almost all the
# cross-crate inlining benefit at a fraction of the build cost.
lto = "thin"
codegen-units = 1
strip = true

# Optimize the pure-Rust RSA stack even in dev/test builds. mde-kdc-host's
# RSA-4096 keygen (E11.8 max-crypto, locked at Q23) runs through the `rsa`
# crate + `num-bigint-dig`; unoptimized those make a single keygen take
# minutes in a debug build, which made the keygen + first_pair tests appear to
# hang and could stall `cargo test --workspace` indefinitely. opt-level=3 on
# just these two crates drops a keygen from >120 s to ~4 s while leaving the
# rest of the workspace fast to compile. Verified: the same test passes in
# 3.84 s under the release profile.
[profile.dev.package.rsa]
opt-level = 3

[profile.dev.package.num-bigint-dig]
opt-level = 3
